now builds on humble/spaceros

--- a/kindr_msgs/CMakeLists.txt
+++ b/kindr_msgs/CMakeLists.txt
@@ -1,12 +1,16 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(kindr_msgs)
 
+find_package(std_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+
 find_package(ament_cmake_auto)
 ament_auto_find_build_dependencies()
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/VectorAtPosition.msg"
   ADD_LINTER_TESTS
+  DEPENDENCIES std_msgs geometry_msgs
 )
 
 if(BUILD_TESTING)
